# diff-equations-solver

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile_local  Dockerfile_tests  LICENSE  README.md  main.cpp
.github/workflows/: job.yml  release.yml  tests.yml
src/: CMakeLists.txt  equation_processor.cpp  equation_processor.hpp  main.cpp
src/calc/: equation_solver.cpp  equation_solver.hpp  equation_solver_factory.cpp  equation_solver_factory.hpp  equation_solver_selector.cpp  equation_solver_selector.hpp  function_value_calculator.cpp  function_value_calculator.hpp  solution.cpp  solution.hpp
src/controller/: equation_solver_controller.cpp  equation_solver_controller.hpp
src/input/: input_formatter.cpp  input_formatter.hpp  input_parser.cpp  input_parser.hpp  input_validator.cpp  input_validator.hpp
src/mapper/: solution_mapper.cpp  solution_mapper.hpp
static/: index.html
tests/: CMakeLists.txt  equation_processor_test.cpp  solution_test.cpp  tests.cpp
tests/calc/: equation_solver_factory.cpp  equation_solver_selector_test.cpp  equation_solver_test.cpp  function_value_calculator_test.cpp  solution_display_particular_test.cpp  solution_display_test.cpp  solution_test.cpp
tests/controller/: equation_solver_controller_test.cpp
tests/input/: input_formatter_test.cpp  input_validator_test.cpp
tests/mapper/: solution_mapper_test.cpp
tests/service/: equation_service_test.cpp  equation_solver_service_test.cpp
tests/solver/: equation_processor_test.cpp
tests/text/: equation_formatter_format_result_test.cpp  equation_formatter_test.cpp
(+11 files in other folders)
